# exmap

./: .gitignore  README.md
client/: .gitignore  (+3 more)
server/: Dockerfile  builddocker.sh  builddockerbase.sh  exmap.cabal  pushdocker.sh  run  rundocker.sh  stack.yaml
server/.stack-work/install/x86_64-linux/lts-8.18/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  bifunctors-5.4.2-wt6HPG9UFgCjbd0zbVYNT  cabal-doctest-1.0.2-7qDWi4QMBieCUnNAxkUwxe  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  comonad-5.0.1-7j4AeOMTFovFSFO9XMFm1  conduit-1.2.11-BRJ88csBMeUJAj93JgTHtZ  contravariant-1.4-3UCY3arLvoG71jrGOYoc39  cpphs-1.20.5-ItOOodR0Hps3mzfwh8D28y  descriptive-0.9.4-FbUWuhQE8cKDKX1g8MmzNk  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  exmap-0.1.0.0  extensible-exceptions-0.1.1.4-IyAM3ARTqH7BVZ5oHMMtXH  happy-1.19.5  haskell-src-exts-1.18.2-F2dYyBmVdIP3Ih9SOoUb1b  hindent-5.2.3-FwNmVDzI70I91XD3f9h0vQ  hostname-1.0-LHxcvBDHWay1RGMj1Uzenf  json-0.9.1-9q9wcD5fRwS7l4ctbMswTn  monad-loops-0.4.3-ERCN4ZKCeeS5SRhwqXsLBP  parsec-3.1.11-113irVHGgd88sRnywByDNw  path-0.5.13-9LacXcoRDF7vwdIakycnE  path-io-1.2.2-KPiTNvgkvdrIxFuuo6rY3A  polyparse-1.12-Ee2dhxWFCj0JUfsZIQidEE  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-posix-0.95.2-KQJt29lnRa45d6bFn9XkFO  semigroups-0.18.2-GvTCUro9Hym1wGKOLNRfUA  strict-0.3.2-IfIKu6GgwJkHDDJQA4k3FZ  stylish-haskell-0.7.1.0-BwmSP44o9xM7F9N6qQwx4k  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS  system-filepath-0.4.13.4-FWiHTT5fTCT3S4HJQGlD59  temporary-1.2.0.4-IIsg6ZMPNLX2bbJdNFhbfn  test-framework-0.8.1.1-3ioe8gq5JA2LOsBqq16aWU  test-framework-hunit-0.3.0.2-bQ0sshm6cs4RbqqBUPKDy  utf8-string-1.0.1.1-1DpjxLeTvGg7ttZZojxJR5  xml-1.3.14-AkPhBHkEQzoJK5yH4ot8y  yaml-0.8.23-8UGmPXoTeFK9AdwRXev7Cg
server/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  aeson-1.1.2.0-H8KqCgI8gcq2RuIUkNEZvK  aeson-pretty-0.8.5-KPnZbWrGYWxCuBuKrDOk44  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-8bUdsjh6UCE83aHCxOEHna  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  blaze-html-0.9.0.1-GQ0yZtPYt2i2KdgnUEOA8p  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  cookie-0.4.2.1-ImqC1hbvUERAwQQgqhuUAD  cryptonite-0.23-EXqej153fRK6r6DVzkvS8x  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  easy-file-0.2.1-rguMBNaECxLikt4CCDx0D  entropy-0.3.8-14HIw40nRRY968j6AdY1H4  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  extensible-exceptions-0.1.1.4-IyAM3ARTqH7BVZ5oHMMtXH  fast-logger-2.4.10-7GMVhEi1femFXwSQxV5ynm  file-embed-0.0.10-KWMmUDaNSRP7AxWSEHlrrK  foundation-0.0.13-G4GHWkMwmXnF7HKMtT8vGa  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  hex-0.1.2-HUUA94TVE748JTmJozIoTC  hostname-1.0-LHxcvBDHWay1RGMj1Uzenf  http-date-0.0.6.1-6KUHc0GXjTfK32NyZJlphO  (+53 more)
server/doc/: server.epgz
server/src/: Main.hs
server/src/actors/: ActorMessages.hs  CalculationActor.hs  EventActor.hs  LoadActor.hs  LogActor.hs  ProjectActor.hs  ProjectActorEvents.hs  ProjectActorEventsForCalculation.hs  ProjectActorEventsForView.hs  ProjectActorRequests.hs  StoreActor.hs  SystemActor.hs  SystemActorEvents.hs  SystemActorRequests.hs  ViewActor.hs  cutted,txt
server/src/actors/messages/: CalculationMessages.hs  EventMessages.hs  LoadMessages.hs  LogMessages.hs  ProjectMessages.hs  StoreMessages.hs  SystemMessages.hs  ViewMessages.hs
server/src/formula/: ExecFormula.hs  Formula.hs
server/src/functions/: ApplicationTypes.hs  Applications.hs  OperationTypes.hs  Operations.hs  XFunction.hs
server/src/json/: CalculationJson.hs  ProjectJson.hs  ViewJson.hs  WebMessagesJson.hs  XMapJson.hs
server/src/maintypes/: Calculation.hs  DateValue.hs  Errors.hs  Project.hs  View.hs  XMapTypes.hs  XValues.hs
server/src/maps/: Formula.hs  XMapTypes.hs  XMapValues.hs  XValues.hs
server/src/messages/: CalculationMessages.hs  LoadMessages.hs  ProjectMessages.hs  StoreMessages.hs  SystemMessages.hs  TChans.hs
server/src/parse/: FormulaParser.hs  FormulaText.hs  ShowText.hs  TextEnums.hs
server/src/state/: Actors.hs  CalculationState.hs  CheckProjectContent.hs  CommonChannels.hs  Dependencies.hs  Errors.hs  LogTypes.hs  Project.hs  ProjectJson.hs  ProjectState.hs  State.hs  StateBuild.hs  SystemState.hs  ViewState.hs  WebAppState.hs
server/src/storage/: Load.hs  Paths.hs  Store.hs
server/src/views/: View.hs
server/src/web/: MessageJson.hs  Messages.hs  RequestsHandler.hs  WebApp.hs  WebAppState.hs  WebClients.hs  WebMessageJson.hs  WebMessages.hs  WebRequestsHandler.hs
server/systemdirtest/: allProjects.ex
server/systemdirtest/comples/: project.ex
server/systemdirtest/complex/: .vew  gappol.vew  kasparov.map  project.ex
server/systemdirtest/complicated/: project.ex
server/systemdirtest/pippo/: project.ex
server/systemdirtest/project1/: project.ex
server/systemdirtest/simple/: calc2.clc  map1.map  map2.map  map3.map  pippo.clc  pippo.map  pippo.vew  project.ex  view1.vew  view2.vew  view3.vew  view4.vew  zambino.clc
server/systemdirtest/sum/: calc_liters.clc  cars.vew  km_liter.map  kms.map  project.ex
server/test/: Main.hs
server/test/formula/: FormulaTest.hs
server/test/functions/: OperationsTest.hs  OperationsTestUtils.hs
server/test/json/: ProjectJsonTest.hs  XMapJsonTest.hs
server/test/maps/: FormulaTest.hs  TestTypes.hs
server/test/parse/: FormulaParserTest.hs  TextEnumsTest.hs
server/test/state/: DependenciesTest.hs  ProjectJsonTest.hs
server/test/testtypes/: TestTypes.hs
server/webclient/: app.js  index.html  theme.css  websockets.js
(+107 files in other folders)
