name:                exmap
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/aferrandi/exmap
license:             BSD3
license-file:        LICENSE
author:              Andrea Ferrandi
maintainer:          ferrandi.andrea@gmail.com
copyright:           2017 Andrea Ferandi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable exmap
  hs-source-dirs:      src src/maintypes src/json src/functions src/formula src/parse src/state src/web src/storage src/actors src/actors/messages src/build
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , http-types
                     , safe
                     , containers
                     , attoparsec
                     , aeson
                     , unordered-containers
                     , filepath
                     , bytestring
                     , stm
                     , base
  other-modules:
                       Formula
                     , TChans
                     , ExecFormula
                     , Operations
                     , Applications
                     , XFunction
                     , XMapTypes
                     , OperationTypes
                     , ApplicationTypes
                     , XValues
                     , FormulaParser
                     , TextEnums
                     , View
                     , Project
                     , SystemState
                     , ProjectState
                     , ViewState
                     , CalculationState
                     , ProjectBuild
                     , SystemBuild
                     , ViewBuild
                     , CalculationBuild
                     , CalculationActor
                     , ProjectActor
                     , SystemActor
                     , ViewActor
                     , LogActor
                     , WebClients
                     , WebApp
                     , ProjectJson
                     , Paths
                     , Load
                     , Store
                     , Dependencies
                     , WebMessageJson
                     , WebMessages
                     , WebRequestsHandler
                     , CalculationMessages
                     , EventMessages
                     , LogMessages
                     , ProjectMessages
                     , SystemMessages
                     , ViewMessages
                     , AssocList
                     , CommonChannels
                     , Errors
                     , EventActor
                     , LoadActor
                     , LoadMessages
                     , LogTypes
                     , StoreActor
                     , StoreMessages

test-suite exmap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test test/parse test/state test/formula test/build test/testtypes src/maintypes src/json src/functions src/formula src/state src/parse src/storage src/build
  main-is:             Main.hs
  build-depends:       base
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , containers
                     , unordered-containers
                     , attoparsec
                     , aeson
                     , text
                     , json
                     , bytestring
  other-modules:
                       Formula
                     , ExecFormula
                     , Operations
                     , Applications
                     , XFunction
                     , XMapTypes
                     , ApplicationTypes
                     , OperationTypes
                     , XValues
                     , FormulaParser
                     , View
                     , TextEnums
                     , TestTypes
                     , Project
                     , ProjectJson
                     , Dependencies
                     , FormulaTest
                     , FormulaParserTest
                     , TextEnumsTest
                     , ProjectJsonTest
                     , DependenciesTest
                     , Errors

--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


