name:                exmap
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/aferrandi/exmap
license:             BSD3
license-file:        LICENSE
author:              Andrea Ferrandi
maintainer:          ferrandi.andrea@gmail.com
copyright:           2017 Andrea Ferandi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable exmap
  hs-source-dirs:      src src/maintypes src/json src/functions src/formula src/parse src/state src/web src/storage src/actors src/actors/messages src/build
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , http-types
                     , safe
                     , containers
                     , attoparsec
                     , aeson
                     , unordered-containers
                     , filepath
                     , directory
                     , bytestring
                     , stm
                     , base
  other-modules:
                       Formula
                     , TChans
                     , ExecFormula
                     , Operations
                     , Applications
                     , XFunction
                     , XMapTypes
                     , OperationTypes
                     , ApplicationTypes
                     , XValues
                     , FormulaParser
                     , TextEnums
                     , View
                     , Calculation
                     , Project
                     , SystemState
                     , ProjectState
                     , ViewState
                     , CalculationState
                     , ProjectBuild
                     , SystemBuild
                     , ViewBuild
                     , CalculationBuild
                     , CalculationActor
                     , ProjectActor
                     , SystemActor
                     , SystemActorEvents
                     , SystemActorRequests
                     , ViewActor
                     , LogActor
                     , WebClients
                     , WebApp
                     , XMapJson
                     , ProjectJson
                     , Paths
                     , Load
                     , Store
                     , Dependencies
                     , WebMessagesJson
                     , WebMessages
                     , WebRequestsHandler
                     , CalculationMessages
                     , EventMessages
                     , LogMessages
                     , ProjectMessages
                     , SystemMessages
                     , ViewMessages
                     , AssocList
                     , CommonChannels
                     , Errors
                     , EventActor
                     , LoadActor
                     , LoadMessages
                     , LogTypes
                     , StoreActor
                     , StoreMessages
                     , FormulaText
                     , ProjectActorEvents
                     , ProjectActorRequests

test-suite exmap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test test/parse test/json test/formula test/build test/testtypes src/maintypes src/json src/functions src/formula src/state src/parse src/storage src/build
  main-is:             Main.hs
  build-depends:       base
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , containers
                     , unordered-containers
                     , attoparsec
                     , aeson
                     , text
                     , json
                     , bytestring
  other-modules:
                       Formula
                     , ExecFormula
                     , Operations
                     , Applications
                     , XFunction
                     , FormulaText
                     , XMapTypes
                     , ApplicationTypes
                     , OperationTypes
                     , XValues
                     , FormulaParser
                     , Calculation
                     , View
                     , TextEnums
                     , TestTypes
                     , Project
                     , ProjectJson
                     , Dependencies
                     , XMapJson
                     , FormulaTest
                     , FormulaParserTest
                     , TextEnumsTest
                     , ProjectJsonTest
                     , XMapJsonTest
                     , DependenciesTest
                     , Errors



--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


